# Kstd

./: CMakeLists.txt  README.md  examples.c
include/: klinkedlist.h  klist.h  kmap.h  kqueue.h  kset.h  kstack.h
src/: klinkedlist.c  klist.c  kmap.c  kqueue.c  kset.c  kstack.c
